force-app/main/default/objects/GitHub_Actions_Config__mdt/GitHub_Actions_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for triggering GitHub Actions Playwright test runs from Salesforce. Set PAT__c post-deploy via Setup → Custom Metadata Types. Never commit the PAT value to source control.</description>
    <label>GitHub Actions Config</label>
    <pluralLabel>GitHub Actions Configs</pluralLabel>
</CustomObject>