force-app/main/default/objects/GitHub_Actions_Config__mdt/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <description>Git branch to run the workflow on (e.g. "main").</description>
    <label>Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>