force-app/main/default/objects/GitHub_Actions_Config__mdt/fields/PAT__c.field-meta.xml
<CustomField>
    <fullName>PAT__c</fullName>
    <description>GitHub Personal Access Token with "workflow" scope. Set this post-deploy via Setup UI — never commit the value to source control.</description>
    <label>Personal Access Token (PAT)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>