force-app/main/default/objects/GitHub_Actions_Config__mdt/fields/Repository_Name__c.field-meta.xml
<CustomField>
    <fullName>Repository_Name__c</fullName>
    <description>GitHub repository name (e.g. &quot;qtcdevcpq-sandbox&quot;).</description>
    <label>Repository Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>