force-app/main/default/objects/GitHub_Actions_Config__mdt/fields/Repository_Owner__c.field-meta.xml
<CustomField>
    <fullName>Repository_Owner__c</fullName>
    <description>GitHub organization or user that owns the repository (e.g. "intapp").</description>
    <label>Repository Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>