force-app/main/default/objects/GitHub_Actions_Config__mdt/fields/Workflow_File__c.field-meta.xml
<CustomField>
    <fullName>Workflow_File__c</fullName>
    <description>Workflow filename inside .github/workflows/ (e.g. "playwright.yml").</description>
    <label>Workflow File</label>
    <length>100</length>
    <type>Text</type>
</CustomField>